--- a/TIMA_Scratch.ipynb
+++ b/TIMA_Scratch.ipynb
@@ -507,14 +507,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 18/18 [00:02<00:00,  6.79it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 18/18 [00:06<00:00,  2.71it/s]\n"
      ]
     },
     {
@@ -549,36 +549,36 @@
        "      <th>571</th>\n",
        "      <td>MN-17-11 - Liberation analysis #1</td>\n",
        "      <td>Clinochlore</td>\n",
-       "      <td>Sulfates</td>\n",
-       "      <td>35.22</td>\n",
+       "      <td>Muscovite</td>\n",
+       "      <td>2.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>572</th>\n",
        "      <td>MN-17-11 - Liberation analysis #1</td>\n",
        "      <td>Ankerite+clay</td>\n",
        "      <td>Sulfates</td>\n",
-       "      <td>35.22</td>\n",
+       "      <td>3.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>573</th>\n",
        "      <td>MN-17-11 - Liberation analysis #1</td>\n",
        "      <td>[Unclassified]</td>\n",
-       "      <td>Sulfates</td>\n",
-       "      <td>35.22</td>\n",
+       "      <td>Other REE Minerals</td>\n",
+       "      <td>46.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>574</th>\n",
        "      <td>MN-17-11 - Liberation analysis #1</td>\n",
        "      <td>Free particles</td>\n",
-       "      <td>Sulfates</td>\n",
-       "      <td>35.22</td>\n",
+       "      <td>Apatite</td>\n",
+       "      <td>71.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>575</th>\n",
        "      <td>MN-17-11 - Liberation analysis #1</td>\n",
        "      <td>Total</td>\n",
-       "      <td>Sulfates</td>\n",
-       "      <td>35.22</td>\n",
+       "      <td>Ankerite+clay</td>\n",
+       "      <td>100.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -593,24 +593,24 @@
        "575  MN-17-11 - Liberation analysis #1           Total   \n",
        "\n",
        "    Most Associated Mineral  Modal Abundances  \n",
-       "571                Sulfates             35.22  \n",
-       "572                Sulfates             35.22  \n",
-       "573                Sulfates             35.22  \n",
-       "574                Sulfates             35.22  \n",
-       "575                Sulfates             35.22  "
+       "571               Muscovite              2.98  \n",
+       "572                Sulfates              3.14  \n",
+       "573      Other REE Minerals             46.47  \n",
+       "574                 Apatite             71.14  \n",
+       "575           Ankerite+clay            100.00  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "row_break = 33 # every sample only have 33 rows of data include sample name\n",
+    "row_break = 33 # every sample only have 33 rows of data include sample name， slice 33 rows\n",
     "mineral_assoc = pd.DataFrame(columns=['Sample ID', 'Mineral Name', 'Most Associated Mineral', 'Modal Abundances'])\n",
     "for i in tqdm.trange(18):\n",
-    "    for j in range(1, 33):\n",
-    "        associated_min = pd.to_numeric(mineral_associations.iloc[i*row_break+1, 1:]).sort_values(ascending=False)\n",
+    "    for j in range(1, row_break): # check every row in one sample\n",
+    "        associated_min = pd.to_numeric(mineral_associations.iloc[i*row_break+j, 1:]).sort_values(ascending=False)\n",
     "        most_assoc_min = associated_min[0]\n",
     "        most_assoc_name = associated_min.index[0]\n",
     "        mineral_assoc=mineral_assoc.append({'Sample ID': mineral_associations.iloc[i*row_break, 0], \n",
@@ -618,7 +618,7 @@
     "                              'Most Associated Mineral': most_assoc_name,\n",
     "                              'Modal Abundances': most_assoc_min}, ignore_index=True)\n",
     "mineral_assoc.tail()\n",
-    "# slice 32 rows\n",
+    "\n",
     "# argmax() get column name \n",
     "# use legend  as one column, paired [] minerals as second/third column?"
    ]
