--- a/TIMA_Scratch.ipynb
+++ b/TIMA_Scratch.ipynb
@@ -311,6 +311,29 @@
     "#### 3.1 Find Grain Shapes and Computing Shape Roundness/Angularity"
    ],
    "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n"
+   ],
+   "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
