--- a/TIMA_Scratch.ipynb
+++ b/TIMA_Scratch.ipynb
@@ -283,7 +283,7 @@
    "cell_type": "markdown",
    "source": [
     "#### 3.1 Pre-process thin section images\n",
-    "- read and crop image (remove scalebar and leave particles only)"
+    "- Read and crop image (remove scalebar and leave particles only)"
    ],
    "metadata": {
     "collapsed": false,
@@ -426,7 +426,11 @@
     "\n",
     "- Use ratio = 4 * pi * Area / ( Perimeter^2) to calculate roundness\n",
     "\n",
-    "    [The roundness formula comes from here](https://stackoverflow.com/questions/29814229/how-to-calculate-the-value-of-the-roundness-shape-feature-of-an-image-contour)"
+    "    [The roundness formula comes from here](https://stackoverflow.com/questions/29814229/how-to-calculate-the-value-of-the-roundness-shape-feature-of-an-image-contour)\n",
+    "\n",
+    "- Use visual grain roudness chart and compute the roundness ratio as a reference:\n",
+    "    e.g. [sediment grain roundness](https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.researchgate.net%2Ffigure%2FA-new-roundness-scale-for-sedimentary-particles-after-Powers_fig4_303702743&psig=AOvVaw0BvbTjj7J5p25u__FamIQL&ust=1588690925747000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCMiHxYS9mukCFQAAAAAdAAAAABAI);\n",
+    "    [fieldwork reference chart](https://www.google.com/url?sa=i&url=https%3A%2F%2Flink.springer.com%2Fchapter%2F10.1007%2F978-3-319-30232-4_3&psig=AOvVaw0BvbTjj7J5p25u__FamIQL&ust=1588690925747000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCMiHxYS9mukCFQAAAAAdAAAAABAS)"
    ],
    "metadata": {
     "collapsed": false,
